inertia/assets/css/components/_medias-slider.scss
@use '../partials/mixins';

.medias-slider {
  position: relative;

  &--small {
    height: 180px;
    aspect-ratio: 350/180;

    .medias-slider__media {
      aspect-ratio: 350/180;
    }
  }

  &--medium {
    height: 226px;
    aspect-ratio: 440/226;

    @media screen and (max-width: 767px) {
      width: 100%;
      height: auto;
    }

    .medias-slider__media {
      aspect-ratio: 440/226;
    }
  }

  &__track {
    display: flex;
    overflow-x: scroll;
    scrollbar-width: none;
    width: 100%;
    height: 100%;
  }

  &__media {
    position: relative;
    flex-shrink: 0;
    width: 100%;
    height: 100%;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: center;
    }
  }

  &__expand {
    position: absolute;
    right: 10px;
    bottom: 10px;
  }

  &__dots {
    position: absolute;
    left: 50%;
    bottom: 8px;
    transform: translateX(-50%);
    display: flex;
    gap: 8px;
  }

  &__dot {
    @include mixins.resetButton(none, var(--primary));
    border-radius: 50%;
    width: 10px;
    height: 10px;
    opacity: 0.4;

    &--active {
      opacity: 1;
    }

    &:focus {
      outline: none !important;
    }
  }
}

